@@ -1,5 +1,9 @@
 2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* ld-shared/shared.exp: Pass $PLT_CFLAGS to ld_compile.
+
+2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* ld-scripts/crossref.exp (CC): Save and restore.  Append
 	$PLT_CFLAGS.
 
